--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:4321/envel
 spring.datasource.username=postgres_user
 spring.datasource.password=postgres_password
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.default_schema=account
