--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:4321/envel
 spring.datasource.username=postgres_user
 spring.datasource.password=postgres_password
 spring.jpa.properties.hibernate.default_schema=account
+graphql.spqr.gui.enabled=true
+graphql.spqr.gui.endpoint=/gui
