--- a/audit/src/main/resources/application.yml
+++ b/audit/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        default_scheme:audit
+        default_schema: audit
 graphql:
   spqr:
     gui:
