Initial GraphQL client implementation Gradle plugin version management Makefile Include gradle wrapper

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,9 @@
 group="com.example"
+springBootVersion=2.5.3
+springDependencyManagementVersion=1.0.11.RELEASE
+flywayVersion=7.11.2
 mockitoKotlinVersion=3.2.0
 graphqlSpqrVersion=0.0.6
+graphqlKotlinVersion=5.0.0-alpha.0
+graphqlKotlinTypesVersion=3.7.0
+jvmVersion=1.5.21
