--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:4321/envel
 spring.datasource.username=postgres_user
 spring.datasource.password=postgres_password
 spring.jpa.properties.hibernate.default_schema=account
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 graphql.spqr.gui.enabled=true
 graphql.spqr.gui.endpoint=/gui
