--- a/audit/src/main/resources/application.yml
+++ b/audit/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
   jpa:
     properties:
       hibernate:
+        jdbc:
+          time_zone: UTC
         default_schema: audit
 graphql:
   spqr:
