--- a/account/src/main/resources/application.yaml
+++ b/account/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-server:
-  port: 8081
-
 spring:
   datasource:
     url: jdbc:postgresql://localhost:4321/envel
@@ -10,9 +7,16 @@ spring:
   jpa:
     properties:
       hibernate:
+        default_schema: account
         jdbc:
           time_zone: UTC
-        default_schema: audit
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:5001/auth/realms/envel
+
 graphql:
   spqr:
     gui:
