Import dev realm for keycloak on startup

--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     depends_on:
       - db
     environment:
+      KEYCLOAK_IMPORT: /tmp/realm-export.json
       KEYCLOAK_USER: keycloak_user
       KEYCLOAK_PASSWORD: keycloak_password
 
