--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     depends_on:
       - db
     environment:
-      KEYCLOAK_IMPORT: /tmp/realm-export.json
+      KEYCLOAK_IMPORT: /tmp/docker/realm-export.json
       KEYCLOAK_USER: keycloak_user
       KEYCLOAK_PASSWORD: keycloak_password
 
@@ -46,4 +46,4 @@ services:
     ports:
       - "5001:8080"
     volumes:
-      - ./keycloak/:/tmp
+      - ./keycloak/:/tmp/docker
