GraphQL Client: Use local schema instead of IntrospectSchema task

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ flywayVersion=7.11.2
 mockitoKotlinVersion=3.2.0
 graphqlSpqrVersion=0.0.6
 graphqlKotlinVersion=5.0.0-alpha.0
-graphqlKotlinTypesVersion=3.7.0
+graphqlKotlinTypesVersion=4.0.0-alpha.15
 jvmVersion=1.5.21
