Secure Audit microservice Add user_id to transactions Add accountId index on transaction entity Move graphql client files Fix audit integration test Use FindAllByAccountId instead of filters CommandL line runner to populate audit db

--- a/audit/src/main/resources/application.yml
+++ b/audit/src/main/resources/application.yml
@@ -10,9 +10,18 @@ spring:
   jpa:
     properties:
       hibernate:
+        format_sql: true
         jdbc:
           time_zone: UTC
         default_schema: audit
+  #    show-sql: true
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:5001/auth/realms/envel
+
 graphql:
   spqr:
     gui:
