Unit test with Parameterized types refactoring

--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -22,3 +22,8 @@ graphql:
     gui:
       enabled: true
       endpoint: /gui
+
+com:
+  example:
+    account:
+      audit-api-url: http://localhost:8081/graphql
