--- a/audit/src/main/resources/application.yml
+++ b/audit/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8081
 
+logging:
+  level:
+    root: debug
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:4321/envel
