--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+logging:
+  level:
+    com:
+      example:
+        debug
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:4321/envel
