--- a/audit/src/main/resources/application.yml
+++ b/audit/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 server:
   port: 8081
 
+logging:
+  level:
+    com:
+      example:
+        debug
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:4321/envel
